# client_server_pi

./: README.md
client/: .cproject  .project  CMakeLists.txt  client  client.cpp
server/: .cproject  .project  CMakeLists.txt  server  server.cpp
